--- a/app/src/main/res/layout/activity_mix_plus.xml
+++ b/app/src/main/res/layout/activity_mix_plus.xml
@@ -311,7 +311,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintGuide_begin="250dp"
+                        app:layout_constraintGuide_percent="0.66"
                         app:layout_constraintStart_toStartOf="parent" />
 
                     <androidx.constraintlayout.widget.Guideline
