activity_mix UI Improvement.

--- a/app/src/main/res/layout/activity_mix.xml
+++ b/app/src/main/res/layout/activity_mix.xml
@@ -10,6 +10,7 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/gridLayout"
         android:layout_width="350dp"
         android:layout_height="350dp"
         android:layout_margin="16dp"
@@ -425,10 +426,9 @@
         android:id="@+id/recyclerView03"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/square2"
         app:layout_constraintBottom_toTopOf="@+id/playbackButton"
+        app:layout_constraintTop_toBottomOf="@id/gridLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.592"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
