--- a/app/src/main/res/layout/progressbar_edit.xml
+++ b/app/src/main/res/layout/progressbar_edit.xml
@@ -13,11 +13,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        app:layout_constraintStart_toEndOf="@id/MusicPlay"
+        app:layout_constraintStart_toEndOf="@id/MusicPlay_Edit"
 
         >
         <ProgressBar
-            android:id="@+id/MusicLine"
+            android:id="@+id/MusicLine2"
             style="@android:style/Widget.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="8dp"
@@ -34,21 +34,21 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/StartTime"
+            android:id="@+id/StartTime2"
             android:text="00:13"
             android:layout_margin="5dp"
             android:textSize="12sp"
-            app:layout_constraintBottom_toTopOf="@id/MusicLine"
+            app:layout_constraintBottom_toTopOf="@id/MusicLine2"
             app:layout_constraintStart_toStartOf="parent"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/EndTime"
+            android:id="@+id/EndTime2"
             android:text="00:30"
             android:layout_margin="5dp"
             android:textSize="12sp"
-            app:layout_constraintBottom_toTopOf="@id/MusicLine"
+            app:layout_constraintBottom_toTopOf="@id/MusicLine2"
             app:layout_constraintEnd_toEndOf="parent"
             />
 
@@ -62,19 +62,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:cardCornerRadius="20dp"
-        android:id="@+id/MusicPlay"
+        android:id="@+id/MusicPlay_Edit"
         android:outlineAmbientShadowColor="#CC819FED"
         android:outlineSpotShadowColor="#CC819FED"
         app:cardElevation="12dp"
         tools:targetApi="p"
         >
 
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/gradient_base"
+            android:background="@drawable/gradient2"
             >
         </androidx.constraintlayout.widget.ConstraintLayout>
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
